Prevent layout shift for ghost row

--- a/core-bundle/contao/themes/flexible/styles/components/row-wizard.pcss
+++ b/core-bundle/contao/themes/flexible/styles/components/row-wizard.pcss
@@ -71,7 +71,8 @@
             display: flex;
         }
 
-        &:first-child:has(>.drag-handle, .row-wizard-add),
+        &.ghost-spacer,
+        &:first-child:has(>.drag-handle),
         &:last-child {
             width: 1%;
             white-space: nowrap;
@@ -84,6 +85,12 @@
                 padding-bottom: 5px;
             }
         }
+    }
+
+    /* Prevent layout shift due to missing sortable button (#9843)  */
+    .ghost-spacer > span {
+        display: inline-block;
+        width: 16px;
     }
 
     &[data-rows-count="0"] {
